lab 10 changes, need testing
